--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,6 +4,7 @@
   "description": "__MSG_appDescription__",
   "version": "0.2.63",
   "manifest_version": 2,
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "default_locale": "en",
   "icons": {
     "16": "images/logo16.png",
